[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "betting-portfolio-system"
version = "0.1.0"
description = "Abstract betting portfolio optimization system — game-agnostic"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ScuraUrsa", email = "f.j.kazmierczak@gmail.com"}
]
keywords = ["betting", "kelly-criterion", "monte-carlo", "portfolio-optimization", "risk-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "streamlit>=1.30",
    "plotly>=5.18",
    "pytest>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0",
    "hypothesis>=6.90",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
include = ["core*", "games*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"
